syntax = "proto3";

package object_builder_service;

option go_package="genproto/object_builder_service";

import "table.proto";
import "object_builder.proto";
import "section.proto";
import "relation.proto";
import "view.proto";
import "app.proto";
import "dashboard.proto";
import "variable.proto";
import "panel.proto";
import "html_template.proto";
import "login.proto";
import "document.proto";
import "event.proto";